# water-chemistry-mcp

./: .flake8  .gitignore  .mcp.json  AI_AGENT_SYSTEM_PROMPT.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_RELEASE_SUMMARY.md  LICENSE  MCP_TEST_REPORT.md  POST_FIX_TEST_REPORT.md  README.md  dosing_phreeqpython_example.py  fe_p_simulation_results.json  pyproject.toml  requirements.txt  server-sse.py  server.py  setup.cfg
.codex/: config.toml  version.json
.codex/sessions/2025/09/27/: rollout-2025-09-27T21-41-13-01998dfb-3120-7731-a12d-324526a6a790.jsonl  rollout-2025-09-27T22-21-52-01998e20-67ca-73a2-ac96-ce7e10cf96d6.jsonl
.github/workflows/: integration.yml  quality.yml  release.yml  test.yml
databases/: __init__.py
databases/official/: __init__.py
docs/: BUG_FIXES_APPLIED.md  CALCULATION_SHEET_IMPLEMENTATION_SUMMARY.md  COMPLETE_FIXES_VERIFICATION.md  COMPREHENSIVE_ISSUE_RESOLUTION_SUMMARY.md  CONSOLIDATION_SUMMARY.md  ENGINEERING_CALCULATION_SHEETS_DESIGN.md  FIXES_APPLIED.md  IMPROVEMENTS_IMPLEMENTED.md  KINETIC_FIXES_APPLIED.md  KINETIC_IMPLEMENTATION_SUMMARY.md  KINETIC_MIGRATION_TO_PHREEQC_NATIVE.md  KINETIC_PRECIPITATION_RECOMMENDATIONS.md  MCP_CLIENT_TEST_OF_FIXES.md  MCP_DETERMINISTIC_ANALYSIS.md  MCP_SERVER_FIXES_SUMMARY.md  MINERAL_EXHAUSTION_FIX_APPLIED.md  PHREEQPYTHON_INTEGRATION_ROADMAP.md  PHREEQPYTHON_INTEGRATION_SUMMARY.md  PHREEQPYTHON_INTEGRATION_VALIDATION.md  README.md  ROBUST_KINETIC_FIXES_SUMMARY.md  SCIENTIFIC_INTEGRITY_IMPROVEMENTS_SUMMARY.md  SWE_AGENT_RESPONSE.md  TEMPLATE_IMPROVEMENTS.md  TEST_EXECUTION_ANALYSIS.md  TOOL_MIGRATION_GUIDE.md  WATERCHEM-MCP-SERVER-ISSUES.md  tool-limitations-doc.md  tool_summary.md  water-chem-improvement-plan.md
templates/calculations/: kinetic_design_calc.ipynb  lime_softening_calc.ipynb  lime_softening_calc_original.ipynb  metal_precipitation_calc.ipynb  pH_adjustment_calc.ipynb  phosphate_removal_calc.ipynb  scaling_assessment_calc.ipynb  treatment_train_calc.ipynb
templates/styles/: engineering_calc.css
tests/: COMPREHENSIVE_TEST_SUITE_SUMMARY.md  README.md  conftest.py  run_all_corrected_tests.bat  run_all_tests.py  run_all_tool_tests.bat  run_enhanced_tests.py  run_ferric_phosphate_tests.py  run_tests.bat  test_batch_processing.py  test_chemical_addition.py  test_chemical_addition_corrected.py  test_chemical_dosing_comprehensive.py  test_dosing_convergence.py  test_dosing_requirement.py  test_dosing_requirement_corrected.py  test_enhanced_dosing_requirement.py  test_enhanced_features.py  test_environment_setup.md  test_ferric_helpers.py  test_ferric_phosphate_comprehensive.py  test_kinetic_reaction.py  test_lime_softening_comprehensive.py  test_performance_benchmarks.py  test_phosphorus_removal.py  test_phreeqc_parser.py  test_scaling_potential.py  test_scaling_potential_corrected.py  test_schemas_ferric.py  test_solution_mixing.py  test_solution_mixing_corrected.py  test_solution_speciation.py  test_solution_speciation_corrected.py  test_solution_speciation_fixed.py  test_thermodynamic_database.py
tools/: __init__.py  batch_processing.py  calculation_sheet_generator.py  chemical_addition.py  dosing_requirement.py  dosing_requirement_phreeqpython.py  ferric_phosphate.py  gas_phase.py  kinetic_reaction.py  membrane_scaling_potential.py  optimization_tools.py  phosphorus_removal.py  phreeqc_wrapper.py  redox_adjustment.py  scaling_potential.py  schemas.py  schemas_ferric.py  solution_mixing.py  solution_speciation.py  surface_interaction.py  thermodynamic_database.py
tools/phreeqc/: __init__.py  backend.py  optimizer.py  parser.py  simulation.py
utils/: __init__.py  amorphous_phases.py  constants.py  convergence_strategies.py  database_cache.py  database_converter.py  database_downloader.py  database_helpers.py  database_management.py  database_registry.py  database_validator.py  exceptions.py  ferric_phases.py  helpers.py  import_helpers.py  inline_phases.py  kinetic_database.py  mass_balance.py  mineral_registry.py  phreeqc_rates_info.py
(+2 files in other folders)
