[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "water-chemistry-mcp"
description = "Advanced Water Chemistry Modeling MCP Server with PHREEQC Integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Puran Water", email = "info@puranwater.com"}
]
maintainers = [
    {name = "Puran Water", email = "info@puranwater.com"}
]
keywords = ["water", "chemistry", "phreeqc", "mcp", "wastewater", "treatment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Environmental Science",
]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "phreeqpython>=1.5.2",
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "aiofiles>=0.8.0",
    "jinja2>=3.0.0",
    "nbformat>=5.0.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/orgs/puran-water/water-chemistry-mcp"
Repository = "https://github.com/orgs/puran-water/water-chemistry-mcp"
Documentation = "https://github.com/orgs/puran-water/water-chemistry-mcp/blob/main/README.md"
"Bug Tracker" = "https://github.com/orgs/puran-water/water-chemistry-mcp/issues"

[project.scripts]
water-chemistry-mcp = "server:main"

[tool.setuptools]
packages = ["tools", "utils"]

[tool.setuptools.package-data]
"*" = ["*.dat", "*.css", "*.ipynb", "*.md"]

[tool.setuptools_scm]
write_to = "_version.py"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | _obsolete_files
  | _archived_tools
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "_obsolete_files/",
    "_archived_tools/",
    "test_*.py",
    "quick_test*.py",
    "debug_*.py",
    "demo_*.py",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["tools", "utils"]
omit = [
    "*/test_*.py",
    "*/_obsolete_files/*",
    "*/_archived_tools/*",
    "*/debug_*.py",
    "*/quick_test*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]